src/newfiles/gui/css/styles.css
/*BODY*/
body{font-size:2em;font-family:sans-serif;margin:0;padding:0;}
body *{vertical-align:middle;}
h1,h2,h3{margin:0;padding:0;}
h1{text-transform:uppercase;font-size:80%;}
h2{}
h3{}
input[type="text"]{background-color:transparent;border:dashed .1em;width:100%;height:2em;line-height:2em;font-size:50%;box-sizing:border-box;-moz-box-sizing:border-box;padding:0 .5em;}
input:focus,textarea:focus{outline:none;}
.plus-minus{position:relative;display:inline-block;cursor:pointer;margin-right:.2em;padding:.2em;box-sizing:border-box;-moz-box-sizing:border-box;}
.plus-minus > span{display:none;width:.6em;height:.6em;}
.plus > .plus-minus > span.plus{display:inline-block;}
.minus > .plus-minus > span.minus{display:inline-block;}
.title{margin-bottom:.3em;white-space:nowrap;}
.title h1{display:inline-block;}
.title .options{position:relative;z-index:999;display:inline-block;width:.6em;height:.9em;cursor:pointer;}
.title .options .arrow{position:relative;width:.4em;height:.4em;padding:.1em;display:block;}
.title .options ul,li.parent ul{position:absolute;left:0;top:65%;display:none;margin:0;padding:0;box-sizing:border-box;-moz-box-sizing:border-box;border:solid 3px;}
li.parent ul{top:100%;min-width:100%;}
li.parent:last-child ul{left:initial;right:0;}
.title .options:hover ul,li.parent:hover ul{display:block;}
.title .options ul li,li.parent ul li{display:block;list-style:none;font-size:43%;font-weight:bold;padding:.5em .5em;white-space:nowrap;border-bottom:.1em dashed;}
li.parent ul li{font-size:95%;text-transform:none;}
.title .options ul li:last-child,li.parent ul li:last-child{border-bottom:none;}
.title .options .arrow:before{position:absolute;left:0;right:0;top:0;bottom:0;margin:auto;content:"";width:0;height:0;border-style:solid;border-width:.4em .2em 0 .2em;}
.size-controls{height:.9em;text-align:right;}
#main-view .size-controls{text-align:left;}
.size-controls > .title{display:block;float:left;text-transform:uppercase;padding:.4em;margin:0;font-size:50%;height:100%;box-sizing:border-box;-moz-box-sizing:border-box;}
.resize.width,.resize.height{width:.2em;position:absolute;right:0;top:0;height:100%;box-sizing:border-box;-moz-box-sizing:border-box;cursor:ew-resize;z-index:990;}
.resize.height{width:100%;height:.2em;cursor:ns-resize;}
svg{display:inline-block;width:100%;height:100%;}
.search,.edit-include-rule{position:relative;}
.search input,.edit-include-rule input{padding-right:2.3em;opacity:.7;font-style:italic;font-weight:normal;}
.search.text-entered input,.edit-include-rule.text-entered input{opacity:1;font-style:normal;padding-left:1.5em;} 
.search .search-btn,.search .clear-btn,.edit-include-rule .add-btn,.edit-include-rule .clear-btn{opacity:.5;width:2.3em;height:2em;position:absolute;right:.8em;font-size:50%;top:0;left:auto;bottom:0;cursor:pointer;border:solid .2em transparent;box-sizing:border-box;-moz-box-sizing:border-box;}
#main-view .search .search-btn,#main-view .edit-include-rule .add-btn{right:0;}
#main-view .search .clear-btn,#main-view .edit-include-rule .clear-btn{left:0;}
.search .clear-btn,.edit-include-rule .clear-btn{right:initial;left:.4em;display:none;width:1.5em;font-size:50%;}
.search.text-entered .clear-btn,.edit-include-rule.text-entered .clear-btn{display:block;opacity:.7;}
.search.text-entered .search-btn,.edit-include-rule.text-entered .add-btn{opacity:1;}
found{border-radius:.2em;display:inline-block;line-height:inherit;font-style:normal;opacity:.2;}
.search .found-count{visibility:hidden;text-align:right;font-weight:bold;font-size:48%;padding-top:.3em;z-index:993;white-space:nowrap;}
.search.results .found-count{display:block;visibility:visible;}
.search .found-count .current{display:inline-block;white-space:nowrap;}
.search.atLast .found-count .current:before{content:"( end )";display:inline-block;margin-right:1em;font-weight:bold;}
.search .found-count .current:after{content:"/";display:inline-block;padding-left:.3em;}
.search .found-count .total{display:inline-block;white-space:nowrap;}
.search .found-count .prev,.search .found-count .next{display:inline-block;height:1em;width:1em;margin-left:.3em;cursor:pointer;}
.search .found-count .prev{}
.search .found-count .next{}
found.glow{opacity:1;font-weight:bold;text-decoration:underline;vertical-align:top;}
found.highlight{font-weight:bold;font-style:italic;text-decoration:none;}
found.glow.highlight{margin:0 .2em;}
found.glow:before,found.glow:after{font-style:normal;opacity:.8;}
found.highlight:before,found.highlight:after{opacity:1;font-weight:Bold;text-decoration:none;}
found.highlight:before{content:"{";padding-right:.1em;}
found.highlight:after{content:"}";padding-left:.1em;}
/* ... */

